--- a/moviexpertise/src/UI/LoadingSpinner.css
+++ b/moviexpertise/src/UI/LoadingSpinner.css
@@ -11,8 +11,8 @@
     height: 46px;
     margin: 1px;
     border-radius: 50%;
-    border: 5px solid #510077;
-    border-color: #510077 transparent #510077 transparent;
+    border: 5px solid #6e002e;
+    border-color: #6e002e transparent #6e002e transparent;
     animation: lds-dual-ring 1.2s linear infinite;
   }
   
