--- a/moviexpertise/src/components/CreatedMovielists.module.css
+++ b/moviexpertise/src/components/CreatedMovielists.module.css
@@ -10,3 +10,19 @@
     text-align: center;
     letter-spacing: 0.8vh;
 }
+
+.row {
+    display: flex;
+    width: 100%;
+}
+
+.movielist {
+    width: 10%;
+    height: 7vh;
+    /* border: 1px solid black; */
+    /* background-color: #bfbfbf; */
+    background: radial-gradient(white, #78797a);
+    margin: auto;
+    margin-bottom: 5vh;
+    border-radius: 1vh;
+}
